functionality and layout change

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="action-modal-container">
     <div id="action-groups">
       <div class="btn-group-vertical" role="group" aria-label="...">
-        <button type="button" id="defaults" class="btn btn-primary">Blank Slate</button>
+        No Action Lists Found
       </div>
     </div>
     <div id="action-group-container">
@@ -221,9 +221,14 @@
     <div id="log-list" class="list">
       <p>Log Message</p>
     </div>
-    <button id="save" class="btn btn-default btn-lg">
-      Save Changes
-    </button>
+    <div id="saveClear">
+      <button id="save" class="btn btn-default btn-lg">
+        Save Changes
+      </button>
+      <button type="button" id="defaults" class="btn btn-danger btn-lg">
+        Clear
+      </button>
+    </div>
   </div>
   </div>
   <!-- Latest compiled and minified JavaScript -->
